vendor/github.com/grafeas/grafeas/server-go/filtering/parser/testdata/error.baseline
a: .a
==================================================
<no result>
Diagnostics:
ERROR: error[0]:1:5: Syntax error
 | a: .a
 | ....^
ERROR: error[0]:1:4: Unrecognized floating point value: .a
 | a: .a
 | ...^

a:-b
==================================================
<no result>
Diagnostics:
ERROR: error[1]:1:4: Syntax error
 | a:-b
 | ...^

a~b
==================================================
<no result>
Diagnostics:
ERROR: error[2]:1:2: Syntax error
 | a~b
 | .^

a[$b] ~ "c*"
==================================================
<no result>
Diagnostics:
ERROR: error[3]:1:7: Syntax error
 | a[$b] ~ "c*"
 | ......^

(
==================================================
<no result>
Diagnostics:
ERROR: error[4]:1:2: Syntax error
 | (
 | .^

argument(1, 2
==================================================
<no result>
Diagnostics:
ERROR: error[5]:1:14: Syntax error
 | argument(1, 2
 | .............^

.(
==================================================
<no result>
Diagnostics:
ERROR: error[6]:1:2: Syntax error
 | .(
 | .^
ERROR: error[6]:1:1: Unrecognized floating point value: .(
 | .(
 | ^

-
==================================================
<no result>
Diagnostics:
ERROR: error[7]:1:2: Syntax error
 | -
 | .^

~=
==================================================
<no result>
Diagnostics:
ERROR: error[8]:1:1: Syntax error
 | ~=
 | ^
ERROR: error[8]:1:2: Syntax error
 | ~=
 | .^

NOT
==================================================
<no result>
Diagnostics:
ERROR: error[9]:1:4: Syntax error
 | NOT
 | ...^

"
==================================================
<no result>
Diagnostics:
ERROR: error[10]:1:1: Syntax error
 | "
 | ^

a  b
==================================================
<no result>
Diagnostics:
ERROR: error[11]:1:3: Syntax error
 | a  b
 | ..^

()
==================================================
<no result>
Diagnostics:
ERROR: error[12]:1:2: Syntax error
 | ()
 | .^

\not: \and
==================================================
<no result>
Diagnostics:
ERROR: error[13]:1:1: Syntax error
 | \not: \and
 | ^
ERROR: error[13]:1:7: Syntax error
 | \not: \and
 | ......^

NOT:AND
==================================================
<no result>
Diagnostics:
ERROR: error[14]:1:4: Syntax error
 | NOT:AND
 | ...^

\u10
==================================================
<no result>
Diagnostics:
ERROR: error[15]:1:1: Syntax error
 | \u10
 | ^